--- a/Bytes/app/src/main/res/layout/activity_search.xml
+++ b/Bytes/app/src/main/res/layout/activity_search.xml
@@ -32,10 +32,10 @@
     <!-- Search Button -->
     <Button
         android:id="@+id/searchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:text="Search"
+        android:background="@drawable/baseline_search_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/searchEditText" />
 
