--- a/Bytes/app/src/main/res/layout/edit_ad_dialog.xml
+++ b/Bytes/app/src/main/res/layout/edit_ad_dialog.xml
@@ -13,8 +13,8 @@
         android:textColor="#2f3363"
         android:textSize="18sp"/>
 
-    <EditText
-        android:id="@+id/editTextSubscription"
+    <Spinner
+        android:id="@+id/spinnerSubscription"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:textSize="18sp"
@@ -22,7 +22,6 @@
         android:padding="8dp"
         android:textColor="@android:color/black"
         android:background="@drawable/edittext"/>
-
     <TextView
         android:id="@+id/distanceRange"
         android:layout_width="wrap_content"
@@ -33,8 +32,8 @@
         android:textStyle="bold"
         android:textColor="#2f3363"/>
 
-    <EditText
-        android:id="@+id/editTextDistanceRange"
+    <Spinner
+        android:id="@+id/spinnerDistanceRange"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:textSize="18sp"
@@ -42,7 +41,6 @@
         android:padding="8dp"
         android:textColor="@android:color/black"
         android:background="@drawable/edittext"/>
-
     <TextView
         android:id="@+id/latitude"
         android:layout_width="wrap_content"
