--- a/Bytes/app/src/main/res/layout/fragment_shorts.xml
+++ b/Bytes/app/src/main/res/layout/fragment_shorts.xml
@@ -1,41 +1,47 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="ExtraText">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/shortsl1"
-    android:background="@drawable/gradient"
-    android:orientation="horizontal">
-<TextView
-    android:layout_width="280dp"
-    android:layout_height="55dp"
-    android:text="B Y T E S"
-    android:textColor="#ffffff"
-    android:textAlignment="center"
-    android:textSize="18sp"
-    android:textStyle="bold"/>
-    <Button
-        android:id="@+id/searchButton"
+
+    <LinearLayout
+        android:id="@+id/shortsl1"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:text="Search"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-</LinearLayout>
+        android:background="@drawable/gradient"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="350dp"
+            android:layout_height="55dp"
+            android:text="B  Y  T  E  S"
+            android:textAlignment="center"
+            android:textColor="#ffffff"
+            android:layout_marginTop="9dp"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="9dp"
+
+            android:background="@drawable/baseline_search_20" />
+    </LinearLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/shortsl1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/shortsl1"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
