--- a/Bytes/app/src/main/res/layout/fragment_video.xml
+++ b/Bytes/app/src/main/res/layout/fragment_video.xml
@@ -142,25 +142,26 @@
 
     <TextView
         android:id="@+id/tvname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_marginTop="580dp"
         android:layout_marginEnd="72dp"
-        android:text=""
+        android:layout_marginStart="8dp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="20dp" />
 
     <TextView
         android:id="@+id/tvdescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/tvname"
+        android:layout_marginTop="620dp"
         android:layout_marginEnd="72dp"
-        android:text=""
+        android:layout_marginStart="8dp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        android:textSize="15dp" />
 
 
 
