--- a/Bytes/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Bytes/app/src/main/res/layout/activity_forgot_password.xml
@@ -19,15 +19,16 @@
             android:layout_height="100dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="60dp"
-            android:text="Find account"
+            android:text="𝐅𝐢𝐧𝐝 𝐀𝐜𝐜𝐨𝐮𝐧𝐭"
             android:textColor="#ffffff"
             android:textSize="33sp"
             android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/women1" />
+            android:layout_height="180dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/find" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/l2"
@@ -64,14 +65,18 @@
             android:textSize="16sp" />
 
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/otp_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="45dp"
             android:text="Get OTP"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"/>
+            android:layout_marginRight="32dp"
+            android:background="@drawable/background_btn"
+            android:textSize="15sp"
+            android:layout_gravity="center"
+            android:textStyle="bold"/>
 
     </LinearLayout>
     <ProgressBar
