--- a/Bytes/app/src/main/res/layout/activity_yourad.xml
+++ b/Bytes/app/src/main/res/layout/activity_yourad.xml
@@ -19,14 +19,15 @@
             android:layout_height="100dp"
             android:layout_marginTop="60dp"
             android:paddingLeft="30dp"
-            android:text="   Your Uploads"
+            android:text="   𝐘𝐨𝐮𝐫 𝐀𝐝𝐬"
             android:textColor="#ffffff"
-            android:textSize="33sp"
+            android:textSize="40sp"
             android:textStyle="bold"/>
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/women2" />
+            android:layout_height="150dp"
+            android:layout_marginTop="13dp"
+            android:src="@drawable/ads" />
     </LinearLayout>
     <EditText
         android:layout_width="match_parent"
