--- a/Bytes/app/src/main/res/layout/activity_adupload.xml
+++ b/Bytes/app/src/main/res/layout/activity_adupload.xml
@@ -12,7 +12,7 @@
         android:layout_height="55dp"
         android:background="@drawable/gradient"
         android:gravity="center"
-        android:text="B Y T E S"
+        android:text="𝐁 𝐘 𝐓 𝐄 𝐒"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="23sp"
