--- a/Bytes/app/src/main/res/layout/activity_editprofile.xml
+++ b/Bytes/app/src/main/res/layout/activity_editprofile.xml
@@ -9,7 +9,7 @@
         <LinearLayout
             android:id="@+id/l1"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="180dp"
             android:background="@drawable/top_background"
             android:orientation="horizontal">
 
@@ -19,7 +19,7 @@
                 android:layout_height="100dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="30dp"
-                android:text="  Edit Profile"
+                android:text="  𝐄𝐝𝐢𝐭 𝐏𝐫𝐨𝐟𝐢𝐥𝐞"
                 android:textColor="#ffffff"
                 android:textSize="33sp"
                 android:textStyle="bold" />
