--- a/Bytes/app/src/main/res/layout/activity_reset_password.xml
+++ b/Bytes/app/src/main/res/layout/activity_reset_password.xml
@@ -19,15 +19,17 @@
             android:layout_height="100dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="60dp"
-            android:text="Reset Password"
+            android:text="𝐑𝐞𝐬𝐞𝐭 𝐏𝐚𝐬𝐬𝐰𝐨𝐫𝐝"
             android:textColor="#ffffff"
             android:textSize="33sp"
             android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/women1" />
+            android:layout_height="180dp"
+            android:src="@drawable/reset"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"/>
     </LinearLayout>
     <TextView
         android:id="@+id/textViewgmail"
@@ -47,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewgmail"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:padding="8dp"
@@ -67,7 +69,7 @@
         android:layout_below="@+id/editTextgmail"
         android:textColor="#2f3363"
         android:textSize="18sp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
 
@@ -76,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewNewPassword"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:padding="8dp"
@@ -96,7 +98,7 @@
         android:textColor="#2f3363"
         android:textSize="18sp"
         android:layout_below="@id/editTextNewPassword"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
 
@@ -105,7 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewConfirmPassword"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:padding="8dp"
@@ -115,14 +117,16 @@
         android:hint="Confirm Your Password"
         android:textSize="16sp"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonUpdatePassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_below="@id/editTextConfirmPassword"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="25dp"
         android:layout_marginStart="32dp"
+        android:background="@drawable/background_btn"
         android:layout_marginEnd="32dp"
+        android:textStyle="bold"
         android:text="Update Password"/>
 
 </RelativeLayout>
