--- a/Bytes/app/src/main/res/layout/fragment_video.xml
+++ b/Bytes/app/src/main/res/layout/fragment_video.xml
@@ -123,17 +123,17 @@
         android:textSize="20dp" />
     <TextView
         android:id="@+id/tvfname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="530dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="500dp"
         android:layout_marginEnd="72dp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="20dp" />
     <TextView
         android:id="@+id/tvlname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_marginTop="550dp"
         android:layout_marginEnd="72dp"
         android:textColor="@android:color/white"
