--- a/Bytes/app/src/main/res/layout/fragment_video.xml
+++ b/Bytes/app/src/main/res/layout/fragment_video.xml
@@ -3,8 +3,6 @@
     android:layout_height="match_parent">
 
     <!-- Like Button -->
-
-
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
@@ -18,8 +16,8 @@
         android:layout_gravity="top|end"
         android:layout_marginTop="300dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_thumb_up"
-        android:background="@android:color/transparent"/>
+        android:src="@drawable/like_icon"
+        android:background="@android:color/transparent" />
 
     <!-- Like Count -->
     <TextView
@@ -42,8 +40,8 @@
         android:layout_gravity="top|end"
         android:layout_marginTop="360dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_thumb_down"
-        android:background="@android:color/transparent"/>
+        android:src="@drawable/dislike_icon"
+        android:background="@android:color/transparent" />
 
     <!-- Dislike Count -->
     <TextView
@@ -57,6 +55,7 @@
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="20dp" />
+
     <!-- Comment Button -->
     <ImageButton
         android:id="@+id/btnComment"
@@ -65,9 +64,8 @@
         android:layout_gravity="top|end"
         android:layout_marginTop="420dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_comment"
-        android:background="@android:color/transparent"/>
-
+        android:src="@drawable/comment_icon"
+        android:background="@android:color/transparent" />
 
     <TextView
         android:id="@+id/commentCount"
@@ -88,8 +86,8 @@
         android:layout_gravity="top|end"
         android:layout_marginTop="480dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/send"
-        android:background="@android:color/transparent"/>
+        android:src="@drawable/send_icon"
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnDownload"
@@ -98,8 +96,8 @@
         android:layout_gravity="top|end"
         android:layout_marginTop="540dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/download"
-        android:background="@android:color/transparent"/>
+        android:src="@drawable/download_icon"
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/btnview"
@@ -108,8 +106,9 @@
         android:layout_gravity="top|end"
         android:layout_marginTop="600dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/views"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent"
+        android:src="@drawable/views_icon" />
+
     <TextView
         android:id="@+id/viewcount"
         android:layout_width="wrap_content"
@@ -121,49 +120,60 @@
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="20dp" />
-    <TextView
-        android:id="@+id/tvfname"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="72dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:textSize="20dp" />
-    <TextView
-        android:id="@+id/tvlname"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="550dp"
-        android:layout_marginEnd="72dp"
-        android:textColor="@android:color/white"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="540dp"
+        android:layout_marginEnd="72dp">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/user_icon"
+            android:layout_marginStart="8dp" />
+
+        <TextView
+            android:id="@+id/tvfname"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="3dp"
+            android:paddingTop="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvlname"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            android:paddingTop="8dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvname"
         android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="580dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="590dp"
         android:layout_marginEnd="72dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="18dp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        android:textSize="17dp" />
 
     <TextView
         android:id="@+id/tvdescription"
         android:layout_width="300dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/tvname"
-        android:layout_marginTop="620dp"
+        android:layout_marginTop="640dp"
         android:layout_marginEnd="72dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="18dp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="15dp" />
-
-
-
-
 </FrameLayout>
