--- a/Bytes/app/src/main/res/layout/fragment_add.xml
+++ b/Bytes/app/src/main/res/layout/fragment_add.xml
@@ -76,14 +76,13 @@
             <EditText
                 android:id="@+id/editTextDescription"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="100dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/edittext"
                 android:ems="10"
                 android:textStyle="bold"
-                android:hint="Enter Video Description"
                 android:inputType="textPersonName"
                 android:padding="8dp"
                 android:textColor="#a2a4b5"
@@ -119,7 +118,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/background_btn"
                 android:padding="4dp"
                 android:text="Select Video"
@@ -127,20 +126,15 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <EditText
+            <TextView
                 android:id="@+id/textViewSelectedVideo"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:background="@drawable/edittext"
-                android:ems="10"
-                android:textStyle="bold"
-                android:inputType="textPersonName"
-                android:padding="8dp"
-                android:textColor="#a2a4b5"
-                android:textSize="16sp"
-                android:visibility="gone"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="5dp"
+                android:textColor="#2f3363"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
